fix url in photo index

--- a/src/main/resources/templates/photo-index.html
+++ b/src/main/resources/templates/photo-index.html
@@ -38,7 +38,8 @@
 				[[*{visible}]]
 			</td>
 			<td>
-				<a th:href="@{photos/show/{id}(id=${photo.id})}">Modifica</a>
+				<a th:href="@{photos/show/{id}(id=${photo.id})}">Mostra</a>
+				<a href="">Modifica</a>
 				<a href="">Elimina</a>
 			</td>
 		</tbody>
