--- a/src/main/resources/templates/photo-index.html
+++ b/src/main/resources/templates/photo-index.html
@@ -39,7 +39,7 @@
 			</td>
 			<td>
 				<a th:href="@{photos/show/{id}(id=${photo.id})}">Mostra</a>
-				<a href="">Modifica</a>
+				<a th:href="@{photos/edit/{id}(id=${photo.id})}">Modifica</a>
 				<a href="">Elimina</a>
 			</td>
 		</tbody>
