fix Photo and Category relation in db

--- a/src/main/resources/templates/photo-show.html
+++ b/src/main/resources/templates/photo-show.html
@@ -7,15 +7,15 @@
 <body th:object = "${photo}">
 
 	<h2>Foto - <i>[[*{title}]]</i></h2>
+	<p><i>[[*{description}]]</i></p>
 	<img th:src="*{url}">
-	<h4>[[*{description}]]</h4>
 	
-	<i
-		th:each="category : ${categories}"
-		th:object="${category}"	
-	>
-		Categorie: [[*{name}]]
-	</i>
+	<p>
+		Categorie: 
+		<i th:each="category : ${categories}" th:object="${category}">
+			[[*{name}]],
+		</i>
+	</p>
 	
 	<p>Visibile: [[*{visible}]]</p>
 </body>
