add create method to save Photo

--- a/src/main/resources/templates/photo-edit.html
+++ b/src/main/resources/templates/photo-edit.html
@@ -9,7 +9,7 @@
 	<h2>Modifica - <i>[[*{title}]]</i></h2>
 	
 	<div th:if="${errors}" class="col-12">
-		<h3 class="text-danger">Si sono verificati i seguenti errori:</h3>
+		<h3>Si sono verificati i seguenti errori:</h3>
 		<ul>
 			<li 
 				th:each="error : ${errors}" 
