--- a/src/main/resources/templates/photo-index.html
+++ b/src/main/resources/templates/photo-index.html
@@ -8,7 +8,9 @@
 
 	<h1>Tutto le foto</h1>
 	
-	
+	<div style="margin-bottom:20px">
+		<a href="photos/create">Aggiungi una foto</a>
+	</div>
 	<table>
 		<thead>
 			<th>Id</th>
