create show method in controller

--- a/src/main/resources/templates/category-index.html
+++ b/src/main/resources/templates/category-index.html
@@ -28,7 +28,7 @@
 				[[*{name}]]
 			</td>
 			<td>
-				<a href="">Mostra</a>
+				<a th:href="@{/categories/show/{id}(id=*{id})}">Mostra</a>
 				<a href="">Modifica</a>
 				<a href="">Elimina</a>
 			</td>
