cteate edit method in controller

--- a/src/main/resources/templates/category-index.html
+++ b/src/main/resources/templates/category-index.html
@@ -29,7 +29,7 @@
 			</td>
 			<td>
 				<a th:href="@{/categories/show/{id}(id=*{id})}">Mostra</a>
-				<a href="">Modifica</a>
+				<a th:href="@{/categories/edit/{id}(id=*{id})}">Modifica</a>
 				<a href="">Elimina</a>
 			</td>
 		</tbody>
