--- a/src/main/resources/templates/category-index.html
+++ b/src/main/resources/templates/category-index.html
@@ -28,9 +28,9 @@
 				[[*{name}]]
 			</td>
 			<td>
-				<a th:href="@{/categories/show/{id}(id=*{id})}">Mostra</a>
-				<a th:href="@{/categories/edit/{id}(id=*{id})}">Modifica</a>
-				<a href="">Elimina</a>
+				<a th:href="@{categories/show/{id}(id=*{id})}">Mostra</a>
+				<a th:href="@{categories/edit/{id}(id=*{id})}">Modifica</a>
+				<a th:href="@{categories/delete/{id}(id=*{id})}">Elimina</a>
 			</td>
 		</tbody>
 	</table>
