--- a/src/main/resources/templates/category-create.html
+++ b/src/main/resources/templates/category-create.html
@@ -3,40 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <title>Crea categoria</title>
+
+<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
 
-	<h2>Crea una nuova categoria</h2>
-	
-	<div th:if="${errors}" class="col-12">
-		<h3>Errors:</h3>
-		<ul>
-			<li th:each="error : ${errors}" th:object="${error}">
-				[[*{defaultMessage}]]
-			</li>
-		</ul>
-	</div>
-	
-	<form method="POST" th:action="@{/categories/create}" th:object="${category}">
-		<label>Nome</label><br>
-		<input type="text" name="title" th:field="*{name}" />
-		<br>
-		
-		<label>Foto</label>
-		<div
-			th:each = "photo : ${photos}"
-			th:object = "${photo}"
-		>
-			<input 
-				type="checkbox" name="photos"
-				
-				th:value="*{id}"
-				th:field="${category.photos}"
-			/>
-			<label>[[*{title}]]</label>
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<h2>Crea una nuova categoria</h2>
+			</div>		
 		</div>
 		
-		<input type="submit" value="Crea" />
-	</form>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<div th:if="${errors}">
+					<h3>Errors:</h3>
+					<ul>
+						<li th:each="error : ${errors}" th:object="${error}">
+							[[*{defaultMessage}]]
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-8 offset-md-2">
+				<form method="POST" th:action="@{/categories/create}" th:object="${category}">
+					<label>Nome</label><br>
+					<input type="text" name="title" th:field="*{name}" />
+					<br>
+					
+					<label>Foto</label>
+					<div
+						th:each = "photo : ${photos}"
+						th:object = "${photo}"
+					>
+						<input 
+							type="checkbox" name="photos"
+							
+							th:value="*{id}"
+							th:field="${category.photos}"
+						/>
+						<label>[[*{title}]]</label>
+					</div>
+					
+					<input type="submit" value="Crea" />
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
