--- a/src/main/resources/templates/category-edit.html
+++ b/src/main/resources/templates/category-edit.html
@@ -3,33 +3,48 @@
 <head>
 <meta charset="UTF-8">
 <title>Modifica categoria</title>
+
+<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body th:object = "${category}">
 
-	<h2>Modifica - <i>[[*{name}]]</i></h2>
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">			
+				<h2>Modifica - <i>[[*{name}]]</i></h2>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-md-8 offset-md-2">			
+				<div th:if="${errors}">
+					<h3>Si sono verificati i seguenti errori:</h3>
+					<ul>
+						<li 
+							th:each="error : ${errors}" 
+							th:object="${error}"
+						>
+							[[*{defaultMessage}]]
+						</li>
+					</ul>
+				</div>
+				<div>
+					<form method="POST" th:action="@{/categories/edit}" th:object="${category}">
+						
+						<input type="number" name="id" th:field="*{id}" style="display:none" />
+						
+						<label>Nome</label><br>
+						<input type="text" name="name" th:field="*{name}" />
+						<br>
+						
+						<input type="submit" value="Aggiorna" />
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 	
-	<div th:if="${errors}" class="col-12">
-		<h3>Si sono verificati i seguenti errori:</h3>
-		<ul>
-			<li 
-				th:each="error : ${errors}" 
-				th:object="${error}"
-			>
-				[[*{defaultMessage}]]
-			</li>
-		</ul>
-	</div>
-	<div>
-		<form method="POST" th:action="@{/categories/edit}" th:object="${category}">
-			
-			<input type="number" name="id" th:field="*{id}" style="display:none" />
-			
-			<label>Nome</label><br>
-			<input type="text" name="name" th:field="*{name}" />
-			<br>
-			
-			<input type="submit" value="Aggiorna" />
-		</form>
-	</div>
+
+
 </body>
 </html>
