--- a/src/main/resources/templates/category-index.html
+++ b/src/main/resources/templates/category-index.html
@@ -3,36 +3,46 @@
 <head>
 <meta charset="UTF-8">
 <title>Categorie</title>
+
+<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
 
-	<h1>Tutte le categorie</h1>
-	
-	<div style="margin-bottom:20px">
-		<a href="categories/create">Crea una categoria</a>
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<h1>Tutte le categorie</h1>				
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th scope="col">ID</th>
+							<th scope="col">Nome</th>
+							<th scope="col">Azioni</th>
+						</tr>
+					</thead>
+					<tbody th:each="category : ${categories}" th:object="${category}">
+						<tr>
+							<th scope="row">[[ *{id} ]]</th>
+							<td>[[*{name}]]</td>
+							<td>
+								<a class="btn btn-link text-primary" th:href="@{categories/show/{id}(id=*{id})}">Mostra</a>
+								<a class="btn btn-link text-warning" th:href="@{categories/edit/{id}(id=*{id})}">Modifica</a>
+								<a class="btn btn-link text-danger" th:href="@{categories/delete/{id}(id=*{id})}">Elimina</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>		
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<a class="btn btn-primary text-center" href="categories/create">Crea una categoria</a>		
+			</div>
+		</div>
 	</div>
-	<table>
-		<thead>
-			<th>Id</th>
-			<th>Name</th>
-			<th>Azioni</th>
-		</thead>
-		<tbody
-			th:each="category : ${categories}"
-			th:object="${category}"
-		>
-			<td>
-				[[*{id}]]
-			</td>
-			<td>
-				[[*{name}]]
-			</td>
-			<td>
-				<a th:href="@{categories/show/{id}(id=*{id})}">Mostra</a>
-				<a th:href="@{categories/edit/{id}(id=*{id})}">Modifica</a>
-				<a th:href="@{categories/delete/{id}(id=*{id})}">Elimina</a>
-			</td>
-		</tbody>
-	</table>
 </body>
 </html>
