--- a/src/main/resources/templates/photo-edit.html
+++ b/src/main/resources/templates/photo-edit.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Modifica Foto</title>
+
+<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body th:object = "${photo}">
 
