--- a/src/main/resources/templates/category-show.html
+++ b/src/main/resources/templates/category-show.html
@@ -8,7 +8,13 @@
 </head>
 <body th:object = "${category}">
 	
-	<h2>Categoria - <i>[[*{name}]]</i></h2>
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">			
+				<h2>Categoria - <i>[[*{name}]]</i></h2>
+			</div>		
+		</div>
+	</div>
 	<div 
 		th:each="photo : ${photos}"
 		th:object="${photo}"
