--- a/src/main/resources/templates/category-show.html
+++ b/src/main/resources/templates/category-show.html
@@ -9,18 +9,29 @@
 <body th:object = "${category}">
 	
 	<div class="container py-5">
-		<div class="row">
+		<div class="row mb-3">
 			<div class="col-md-8 offset-md-2">			
 				<h2>Categoria - <i>[[*{name}]]</i></h2>
 			</div>		
 		</div>
-	</div>
-	<div 
-		th:each="photo : ${photos}"
-		th:object="${photo}"
-	>
-		<img th:src="*{url}">
-		<h4> [[*{title}]] </h4>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<div class="row">
+					<div 
+						class="col-md-3"
+						th:each="photo : ${photos}"
+						th:object="${photo}"
+						>			
+						<div class="card">
+							<img th:src="*{url}" class="card-img-top">
+							<div class="card-body">
+								<h6 class="card-title"> [[*{title}]] </h6>
+							</div>
+						</div>
+					</div>	
+				</div>							
+			</div>	
+		</div>
 	</div>
 </body>
 </html>
