--- a/src/main/resources/templates/photo-edit.html
+++ b/src/main/resources/templates/photo-edit.html
@@ -8,60 +8,68 @@
 </head>
 <body th:object = "${photo}">
 
-	<h2>Modifica - <i>[[*{title}]]</i></h2>
-	
-	<div th:if="${errors}" class="col-12">
-		<h3>Si sono verificati i seguenti errori:</h3>
-		<ul>
-			<li 
-				th:each="error : ${errors}" 
-				th:object="${error}"
-			>
-				[[*{defaultMessage}]]
-			</li>
-		</ul>
-	</div>
-	<div>
-		<form method="POST" th:action="@{/photos/edit}" th:object="${photo}">
-			
-			<input type="number" name="id" th:field="*{id}" style="display:none" />
-			
-			<label>Titolo</label><br>
-			<input type="text" name="title" th:field="*{title}" />
-			<br>
-			
-			<label>Descrizione</label><br>
-			<input type="text" name="description" th:field="*{description}" />
-			<br>
-			
-			<label>Url</label><br>
-			<input type="text" name="url" th:field="*{url}" />
-			<br>
-			
-			<label>Visibilità</label>
-			<div>
-				<input type="radio" name="visible" th:field="*{visible}" value="1"/><label>Visibile</label>
-				<input type="radio" name="visible" th:field="*{visible}" value="0"/><label>Non visibile</label>
+	<div class="container py-5">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<h2>Modifica - <i>[[*{title}]]</i></h2>				
 			</div>
-			<br>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-8 offset-md-2" th:if="${errors}">
+				<h4>Si sono verificati i seguenti errori:</h4>
+				<ul>
+					<li 
+						th:each="error : ${errors}" 
+						th:object="${error}"
+					>
+						[[*{defaultMessage}]]
+					</li>
+				</ul>				
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<form method="POST" th:action="@{/photos/edit}" th:object="${photo}">
 			
-			<label>Categorie</label>
-			<div
-				th:each = "category : ${categories}"
-				th:object = "${category}"
-			>
-				<input 
-					type="checkbox" name="categories"
+					<input type="number" name="id" th:field="*{id}" style="display:none" />
 					
-					th:value="*{id}"
-					th:field="${photo.categories}"
-				/>
-				<label>[[*{name}]]</label>
+					<label class="form-label">Titolo</label><br>
+					<input class="form-control"type="text" name="title" th:field="*{title}" />
+					<br>
+					
+					<label class="form-label">Descrizione</label><br>
+					<input class="form-control" type="text" name="description" th:field="*{description}" />
+					<br>
+					
+					<label class="form-label">Url</label><br>
+					<input class="form-control" type="text" name="url" th:field="*{url}" />
+					<br>
+					
+					<label class="form-label">Visibilità</label>
+					<div>
+						<input class="form-check-input" type="radio" name="visible" th:field="*{visible}" value="1"/><label>Visibile</label>
+						<input class="form-check-input" type="radio" name="visible" th:field="*{visible}" value="0"/><label>Non visibile</label>
+					</div>
+					<br>
+					
+					<label class="form-label">Categorie</label>
+					<div
+						th:each = "category : ${categories}"
+						th:object = "${category}"
+					>
+						<input 
+							type="checkbox" name="categories" class="form-check-input"
+							
+							th:value="*{id}"
+							th:field="${photo.categories}"
+						/>
+						<label class="form-check-label" >[[*{name}]]</label>
+					</div>
+					
+					<button class="btn btn-primary" type="submit">Aggiorna</button>
+				</form>
 			</div>
-			
-			<input type="submit" value="Aggiorna" />
-		</form>
+		</div>
 	</div>
-
 </body>
 </html>
