create and import headerFrag

--- a/src/main/resources/templates/category-edit.html
+++ b/src/main/resources/templates/category-edit.html
@@ -8,6 +8,8 @@
 </head>
 <body th:object = "${category}">
 
+	<header th:replace="~{headerFrag :: header()}"></header>
+	
 	<div class="container py-5">
 		<div class="row">
 			<div class="col-md-8 offset-md-2">			
