--- a/src/main/resources/templates/category-create.html
+++ b/src/main/resources/templates/category-create.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+	<header th:replace="~{frag :: header()}"></header>
+	
 	<div class="container py-5">
 		<div class="row">
 			<div class="col-md-8 offset-md-2">
