--- a/src/main/resources/templates/photo-index.html
+++ b/src/main/resources/templates/photo-index.html
@@ -7,6 +7,8 @@
 <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
+
+	<header th:replace="~{headerFrag :: header()}"></header>
 	
 	<div class="container py-5">
 		<div class="row">
