--- a/src/main/resources/templates/photo-show.html
+++ b/src/main/resources/templates/photo-show.html
@@ -8,6 +8,8 @@
 </head>
 <body th:object = "${photo}">
 
+	<header th:replace="~{headerFrag :: header()}"></header>
+	
 	<div class="containe py-5">
 		<div class="row">
 			<div class="col-md-4 offset-md-4">	
