--- a/src/main/resources/templates/photo-create.html
+++ b/src/main/resources/templates/photo-create.html
@@ -10,51 +10,62 @@
 
 	<header th:replace="~{headerFrag :: header()}"></header>
 	
-	<h2>Aggiungi una foto</h2>
-	<div th:if="${errors}" class="col-12">
-		<h3>Errors:</h3>
-		<ul>
-			<li th:each="error : ${errors}" th:object="${error}">
-				[[*{defaultMessage}]]
-			</li>
-		</ul>
+	<div class="container py-2">
+		<div class="row mb-3">
+			<div class="col-md-8 offset-md-2">			
+				<h2>Aggiungi una foto</h2>
+			</div>		
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-8 offset-md-2" th:if="${errors}">			
+				<h3>Errors:</h3>
+				<ul>
+					<li th:each="error : ${errors}" th:object="${error}">
+						[[*{defaultMessage}]]
+					</li>
+				</ul>
+			</div>	
+			<div class="row">
+				<div class="col-md-8 offset-md-2">
+					<form method="POST" th:action="@{/photos/create}" th:object="${photo}">
+						<label class="form-label">Titolo</label><br>
+						<input class="form-control" type="text" name="title" th:field="*{title}" />
+						<br>
+						
+						<label class="form-label">Descrizione</label><br>
+						<input class="form-control" type="text" name="description" th:field="*{description}" />
+						<br>
+						
+						<label class="form-label">Url</label><br>
+						<input class="form-control" type="text" name="url" th:field="*{url}" />
+						<br>
+						
+						<label class="form-label">Visibilità</label>
+						<div>
+							<input class="form-check-input" type="radio" name="visible" th:field="*{visible}" value="1"/><label>Visibile</label>
+							<input class="form-check-input" type="radio" name="visible" th:field="*{visible}" value="0"/><label>Non visibile</label>
+						</div>
+						<br>
+						
+						<label class="form-label">Categorie</label>
+						<div
+							th:each = "category : ${categories}"
+							th:object = "${category}"
+						>
+							<input 
+								type="checkbox" name="categories" class="form-check-input" 
+								
+								th:value="*{id}"
+								th:field="${photo.categories}"
+							/>
+							<label class="form-check-label">[[*{name}]]</label>
+						</div>
+						
+						<button class="btn btn-primary" type="submit">Aggiungi</button>
+					</form>
+				</div>
+			</div>	
+		</div>
 	</div>
-	
-	<form method="POST" th:action="@{/photos/create}" th:object="${photo}">
-		<label>Titolo</label><br>
-		<input type="text" name="title" th:field="*{title}" />
-		<br>
-		
-		<label>Descrizione</label><br>
-		<input type="text" name="description" th:field="*{description}" />
-		<br>
-		
-		<label>Url</label><br>
-		<input type="text" name="url" th:field="*{url}" />
-		<br>
-		
-		<label>Visibilità</label>
-		<div>
-			<input type="radio" name="visible" th:field="*{visible}" value="1"/><label>Visibile</label>
-			<input type="radio" name="visible" th:field="*{visible}" value="0"/><label>Non visibile</label>
-		</div>
-		<br>
-		
-		<label>Categorie</label>
-		<div
-			th:each = "category : ${categories}"
-			th:object = "${category}"
-		>
-			<input 
-				type="checkbox" name="categories"
-				
-				th:value="*{id}"
-				th:field="${photo.categories}"
-			/>
-			<label>[[*{name}]]</label>
-		</div>
-		
-		<input type="submit" value="Aggiungi" />
-	</form>
 </body>
 </html>
