--- a/src/main/resources/templates/headerFrag.html
+++ b/src/main/resources/templates/headerFrag.html
@@ -8,7 +8,7 @@
 	<header th:fragment="header()" class="mb-5">
 	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5">
-		  <a class="navbar-brand" href="#">Il mio fotoalbum</a>
+		  <a class="navbar-brand" href="http://localhost:8080/">Il mio fotoalbum</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
